--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,53 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* fix dropdown datatables */
+div.dt-container select.dt-input {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%236b7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
+    background-position: right 0.5rem center;
+    background-repeat: no-repeat;
+    background-size: 1.25em 1.25em;
+
+    padding-right: 2.25rem !important;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
+/* fix pagination datatable */
+div.dt-container .dt-paging .dt-paging-button.disabled:hover,
+div.dt-container .dt-paging .dt-paging-button.disabled:active {
+    border: 1px solid #e5e7eb !important;
+    background-color: #f9fafb !important;
+    color: #9ca3af !important;
+    cursor: not-allowed !important;
+    box-shadow: none !important;
+}
+
+div.dt-container .dt-paging .dt-paging-button:hover {
+    border: 1px solid #e5e7eb !important;
+    background-color: #f9fafb !important;
+    color: #111827 !important;
+}
+
+div.dt-container .dt-paging .dt-paging-button:active {
+    border: 1px solid #d1d5db !important;
+    background-color: #f3f4f6 !important;
+    color: #111827 !important;
+    box-shadow: none !important;
+}
+
+div.dt-container .dt-paging .dt-paging-button.current {
+    border: 1px solid #d1d5db !important;
+    background-color: #f3f4f6 !important;
+    color: #111827 !important;
+}
+
+div.dt-container .dt-search input,
+div.dt-container .dt-input {
+    border: 1px solid #d1d5db !important;
+    border-radius: 0.375rem !important;
+    padding: 0.4rem 0.6rem !important;
+    margin-right: 2px !important;
+}
